--- a/src/Mzayad.Web/Areas/admin/Views/Users/EditSubscription.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/EditSubscription.cshtml
@@ -21,7 +21,7 @@
             @Html.LabelFor(i => i.CurrentSubscription, "New Subscription")
             <div class="row">
                 <div class="col-md-4">
-                    @Html.EditorFor(i => i.CurrentSubscription)
+                    @Html.EditorFor(i => i.CurrentSubscription, "DateTimePicker")
                 </div>
                 <div class="col-md-8 form-inline">
 
