--- a/src/Mzayad.Web/Areas/admin/Views/Users/EditSubscription.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/EditSubscription.cshtml
@@ -18,13 +18,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(i => i.CurrentSubscription, "New Subscription")
+            @Html.LabelFor(i => i.CurrentSubscription, "Edit Subscription")
             <div class="row">
                 <div class="col-md-4">
                     @Html.EditorFor(i => i.CurrentSubscription, "DateTimePicker")
                 </div>
                 <div class="col-md-8 form-inline">
-
                     <button type="button" id="btnAddDays" class="btn btn-link"><i class="fa fa-chevron-left fa-pad-right"></i>Add</button>
                     <div class="input-group">
                         @Html.TextBoxFor(i => i.AddDays, new { @class = "form-control form-control-sm", @type = "number" })
@@ -46,7 +45,7 @@
 
 @section scripts {
     @Scripts.Render("~/js/validate")
-    <script type="text/javascript">
+    <script>
         $(function() {
 
             $(".date-picker").datepicker({ minDate: 0, dateFormat: 'dd/mm/yy' });
@@ -55,11 +54,10 @@
                 var $datePicker = $(".date-picker");
                 var $addDayTxt = $("#AddDays");
                 var parts = $datePicker.val().split('/');
-                var cureentDate = new Date(parts[2], parts[1] - 1, parts[0],0,0,0,0);
-                cureentDate.setDate(cureentDate.getDate() + parseInt($addDayTxt.val()));
-                var date_str = $.datepicker.formatDate('dd/mm/yy', cureentDate);
-                $datePicker.val(date_str);
-
+                var currentDate = new Date(parts[2], parts[1] - 1, parts[0],0,0,0,0);
+                currentDate.setDate(currentDate.getDate() + parseInt($addDayTxt.val()));
+                var date_str = $.datepicker.formatDate('dd/mm/yy', currentDate);
+                $datePicker.val(date_str).change();
             });
 
         });
