MZ-71 added footnote explanations for XP and token formulas

--- a/src/Mzayad.Web/Areas/admin/Views/Levels/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Levels/Index.cshtml
@@ -9,8 +9,8 @@
     <thead>
         <tr>
             <th>Level</th>
-            <th>XP Required ( @Level.XpBase * Level<sup>2</sup> )</th>
-            <th>Tokens Awarded ( 5 * Level )</th>
+            <th>XP Required<sup>1</sup></th>
+            <th>Tokens Awarded<sup>2</sup></th>
         </tr>
     </thead>
     <tbody>
@@ -25,3 +25,13 @@
     </tbody>
 </table>
 
+<ol>
+    <li>
+        Uses a linear rising level gap formula (<small><a href="http://gamedev.stackexchange.com/a/13639">http://gamedev.stackexchange.com/a/13639</a></small>):
+        <pre>50(level<sup>2</sup> - level)</pre>
+    </li>
+    <li>
+        Uses the token amount awarded at the previous level + 5 tokens more:
+        <pre>5 * level</pre>
+    </li>
+</ol>
