--- a/src/Mzayad.Web/Areas/admin/Views/Subscriptions/_AddEdit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Subscriptions/_AddEdit.cshtml
@@ -15,8 +15,15 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(i => i.Subscription.Status, "Status").Required()
-                    @Html.DropDownListFor(i => i.Subscription.Status, Model.StatusList, new { @class = "form-control" })
+                    @Html.DropDownListFor(i => i.Subscription.Status, Model.StatusList, new {@class = "form-control"})
                     @Html.ValidationMessageFor(i => i.Subscription.Status, "Please select a status.")
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(i => i.Subscription.PurchasePrice, "Price (KD)")
+                    <div class="input-group">
+                        @Html.TextBoxFor(i => i.Subscription.PurchasePrice, new { @class = "form-control", @type = "number" })
+                        <span class="input-group-addon">KD</span>
+                    </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(i => i.Subscription.ExpirationUtc, "Expiration") <small>[optional]</small>
