--- a/src/Mzayad.Web/Areas/admin/Views/Subscriptions/_AddEdit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Subscriptions/_AddEdit.cshtml
@@ -34,17 +34,31 @@
                         <div class="form-group">
                             @Html.LabelFor(i => i.Subscription.PurchaseTokens, "Price (tokens)")
                             <div class="input-group">
-                                @Html.TextBoxFor(i => i.Subscription.PurchaseTokens, new { @class = "form-control", @type = "number" })
+                                @Html.TextBoxFor(i => i.Subscription.PurchaseTokens, new {@class = "form-control", @type = "number"})
                                 <span class="input-group-addon">tokens</span>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(i => i.Subscription.ExpirationUtc, "Expiration") <small>[optional]</small>
-                    @Html.EditorFor(i => i.Subscription.ExpirationUtc)
+                <div class="row">
+                    <div class="col-md-6">
+                        @Html.LabelFor(i => i.Subscription.Duration, "Duration")
+                        <div class="input-group">
+                            @Html.TextBoxFor(i => i.Subscription.Duration, new { @class = "form-control", @type = "number" })
+                            <span class="input-group-addon">days</span>
+                        </div>
+                        @Html.ValidationMessageFor(i => i.Subscription.Duration, "Please enter a duration.")
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            @Html.LabelFor(i => i.Subscription.ExpirationUtc, "Expiration") <small>[optional]</small>
+                            @Html.EditorFor(i => i.Subscription.ExpirationUtc)
+                        </div>
+                    </div>
                 </div>
+
+
                 <div class="form-group">
                     @Html.LabelFor(i => i.Subscription.Quantity, "Quantity") <small>[optional]</small>
                     @Html.TextBoxFor(i => i.Subscription.Quantity, new { @class = "form-control", @type = "number" })
