--- a/src/Mzayad.Web/Views/User/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/User/_Layout.cshtml
@@ -11,7 +11,7 @@
         <ul class="menu-list">
             <li><a href="@Url.Action("EditAccount","User")"><i class="fa fa-fw fa-pad-right fa-user"></i>@Global.EditAccount</a></li>
             <li><a href="@Url.Action("EditProfile", "User")"><i class="fa fa-fw fa-pad-right fa-rocket"></i>@Global.EditProfile</a></li>
-            <li><a href="@Url.Action("Buy", "Subscriptions")"><i class="fa fa-fw fa-pad-right fa-gift"></i>@Global.BuySubscription</a></li>
+            <li><a href="@Url.Action("Index", "Subscriptions")"><i class="fa fa-fw fa-pad-right fa-gift"></i>@Global.BuySubscription</a></li>
             <li><a href="@Url.Action("ChangePassword", "User")"><i class="fa fa-fw fa-pad-right fa-lock"></i>@Global.ChangePassword</a></li>
             <li><a href="@Url.Action("Notifications", "User")"><i class="fa fa-fw fa-pad-right fa-bullhorn"></i>@Global.Notifications</a></li>
             <li><a href="@Url.Action("Index","WishList")"><i class="fa fa-fw fa-pad-right fa-star"></i>@Global.MyWishList</a></li>
