MZ-76 renamed Subscriptions.BuyNow() to Buy()

--- a/src/Mzayad.Web/Views/Subscriptions/Index.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/Index.cshtml
@@ -69,7 +69,7 @@
                         </div>
                     </div>
 
-                    <a class="btn btn-default btn-block" href="@Url.Action("BuyNow", new { subscriptionId = item.SubscriptionId })">Buy Now</a>
+                    <a class="btn btn-default btn-block" href="@Url.Action("Buy", new { subscriptionId = item.SubscriptionId })">Buy Now</a>
 
                 </div>
             </div>
