MZ-76 added buy post action

--- a/src/Mzayad.Web/Views/Subscriptions/Buy.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/Buy.cshtml
@@ -1,14 +1,15 @@
 ﻿@using Mzayad.Core.Formatting
+@using Mzayad.Web.Models.Subscriptions
 @using OrangeJetpack.Base.Core.Formatting
 @using DateTimeFormatter = OrangeJetpack.Base.Core.Formatting.DateTimeFormatter
-@model Mzayad.Web.Models.Subscriptions.BuyNowViewModel
+@model BuyNowViewModel
 
 @{
     ViewBag.Title = StringFormatter.ObjectFormat(Global.BuySubscriptionWithName, Model);
 }
 
 <p class="instruction">
-    You can buy <strong>@Model.Subscription.Name</strong> for <strong>@Model.Subscription.FormattedPrice()</strong>, this will give you a valid subscription until <strong>@DateTimeFormatter.ToLocalTime(Model.NewExpirationUtc, DateTimeFormatter.Format.Full)</strong>.
+    You are buying <strong>@Model.Subscription.Name</strong> for <strong>@Model.Subscription.FormattedPrice()</strong>, this will give you a valid subscription until <strong>@DateTimeFormatter.ToLocalTime(Model.NewExpirationUtc, DateTimeFormatter.Format.Full)</strong>.
 </p>
 
 <div class="row">
@@ -20,6 +21,7 @@
             @Html.AntiForgeryToken()
 
             <section>
+                
                 <div class="form-group">
                     <i class="fa fa-lg fa-check-square-o"></i>
                     @Html.Raw(string.Format(Global.RegistrationAgreementAcknowledgement, Url.Action("TermsAndConditions", "Home", new { Language = Html.Language() })))
@@ -28,11 +30,15 @@
 
             <section class="form-buttons">
 
-                <button class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceKd, new { FormattedPrice = CurrencyFormatter.Format(Model.Subscription.PriceCurrency) })</button>
+                @if (Model.Subscription.PriceCurrencyIsValid)
+                {
+                    <button name="PriceType" value="@PriceType.Currency" type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceKd, new { FormattedPrice = CurrencyFormatter.Format(Model.Subscription.PriceCurrency) })</button>
+                }
 
-
-
-                <button class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { TokenAmount = Model.Subscription.PriceTokens })</button>
+                @if (Model.Subscription.PriceTokensIsValid)
+                {
+                    <button name="PriceType" value="@PriceType.Tokens" type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { TokenAmount = Model.Subscription.PriceTokens })</button>
+                }
 
             </section>
         }
