--- a/src/Mzayad.Web/Views/Subscriptions/Buy.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/Buy.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Mzayad.Core.Formatting
+@using Mzayad.Models.Enum
 @using Mzayad.Web.Models.Subscriptions
 @using OrangeJetpack.Base.Core.Formatting
 @using DateTimeFormatter = OrangeJetpack.Base.Core.Formatting.DateTimeFormatter
@@ -32,12 +33,12 @@
 
                 @if (Model.Subscription.PriceCurrencyIsValid)
                 {
-                    <button name="PriceType" value="@PriceType.Currency" type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceKd, new { FormattedPrice = CurrencyFormatter.Format(Model.Subscription.PriceCurrency) })</button>
+                    <button name="PaymentMethod" value="@PaymentMethod.Knet" type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceKd, new { FormattedPrice = CurrencyFormatter.Format(Model.Subscription.PriceCurrency) })</button>
                 }
 
                 @if (Model.Subscription.PriceTokensIsValid)
                 {
-                    <button name="PriceType" value="@PriceType.Tokens" type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { TokenAmount = Model.Subscription.PriceTokens })</button>
+                    <button name="PaymentMethod" value="@PaymentMethod.Tokens" type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { TokenAmount = Model.Subscription.PriceTokens })</button>
                 }
 
             </section>
