MZ-76 fixed pricing formatting

--- a/src/Mzayad.Web/Views/Subscriptions/Index.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/Index.cshtml
@@ -7,7 +7,6 @@
 
 @section styles {
     <style>
-        
         .row-item {
             margin: 15px;
         }
@@ -16,7 +15,6 @@
             text-align: right;
             font-weight: bold;
         }
-
     </style>
 }
 
@@ -25,33 +23,25 @@
     {
         <div class="col-md-4">
 
-            <div class="panel panel-default">
+            <div class="panel panel-default text-center">
                 <div class="panel-heading">@item.Name</div>
                 <div class="panel-body">
 
-                    <div class="row row-item">
-                        <div class="col-xs-4 row-label">Duration</div>
-                        <div class="col-xs-8 row-value">@item.Duration days</div>
-                    </div>
-                    <div class="row row-item">
-                        <div class="col-xs-4 row-label">Price</div>
-                        <div class="col-xs-8 row-value">@item.FormattedPrice()</div>
-                    </div>
-                    <div class="row row-item">
-                        <div class="col-xs-4 row-label">Quantity</div>
-                        <div class="col-xs-8 row-value">
-                            @if (item.Quantity.HasValue)
-                            {
-                                <span>Only @item.Quantity left!</span>
-                            }
-                            else
-                            {
-                                <span>no limit</span>
-                            }
-                        </div>
-                    </div>
+                    <p><strong>Duration:</strong> @item.Duration days</p>
+                    <p><strong>Price:</strong> @item.FormattedPrice()</p>
+                    <p>
+                        <strong>Quantity:</strong>
+                        @if (item.Quantity.HasValue)
+                        {
+                            <span>only @item.Quantity left!</span>
+                        }
+                        else
+                        {
+                            <span>no limit</span>
+                        }
+                    </p>
 
-                    <a class="btn btn-default btn-block" href="@Url.Action("Buy", new { subscriptionId = item.SubscriptionId })">Buy Now</a>
+                    <a class="btn btn-default btn-block" href="@Url.Action("Buy", new {subscriptionId = item.SubscriptionId})">Buy Now</a>
 
                 </div>
             </div>
