MZ-76 added subscription and token amounts to user dashboard; renamed some subscription service methods

--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -58,7 +58,7 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     max-width: 125px !important;
 }
 
-.form-control-static:after {
+p.form-control-static:after {
     content: '\0000a0' // add &nbsp; to prevent empty contents from collapsing
 }
 
