--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -52,7 +52,7 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .form-control-md {
   max-width: 125px !important;
 }
-.form-control-static:after {
+p.form-control-static:after {
   content: '\0000a0';
 }
 .form-search {
