--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -29,6 +29,18 @@
                 </ul>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Subscription</label>
+            <div class="col-sm-10">
+                <p class="form-control-static">@Html.DisplayFor(m => m.ApplicationUser.SubscriptionUtc, "SubscriptionUtc")</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Tokens</label>
+            <div class="col-sm-10">
+                <p class="form-control-static">@StringFormatter.ObjectFormat(Global.SubscriptionPriceTokens, new { PriceTokens = Model.ApplicationUser.Tokens })</p>
+            </div>
+        </div>
     </div>
 </div>
 
