--- a/src/Mzayad.Web/Views/Subscriptions/Buy.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/Buy.cshtml
@@ -9,19 +9,30 @@
 }
 
 <p class="instruction">
-    You are buying <strong>@Model.Subscription.Name</strong> for <strong>@Model.Subscription.FormattedPrice()</strong>, this will give you a valid subscription until <strong>@DateTimeFormatter.ToLocalTime(Model.NewExpirationUtc, DateTimeFormatter.Format.Full)</strong>.
+    @Html.Raw(StringFormatter.ObjectFormat(Global.SubscriptionBuyInstructions, new
+    {
+        Model.Subscription.Name,
+        FormattedPrice = Model.Subscription.FormattedPrice(),
+        Model.Subscription.Duration,
+        NewExpiration = DateTimeFormatter.ToLocalTime(Model.NewExpirationUtc, DateTimeFormatter.Format.Full)
+    }))
 </p>
 
-<p class="text-center">
+@using (Html.BeginForm("BuyWithKnet", "Subscriptions", new { Model.Subscription.SubscriptionId }))
+{
+    @Html.AntiForgeryToken()
+    
+    <p class="text-center">
 
-    @if (Model.Subscription.PriceCurrencyIsValid)
-    {
-        <a href="#" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceKd, new { FormattedPrice = CurrencyFormatter.Format(Model.Subscription.PriceCurrency) })</a>
-    }
+        @if (Model.Subscription.PriceCurrencyIsValid)
+        {
+            <button type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceKd, new { FormattedPrice = CurrencyFormatter.Format(Model.Subscription.PriceCurrency) })</button>
+        }
 
-    @if (Model.Subscription.PriceTokensIsValid)
-    {
-        <a href="@Url.Action("BuyWithTokens", new { Model.Subscription.SubscriptionId })" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { Model.Subscription.PriceTokens })</a>
-    }
+        @if (Model.Subscription.PriceTokensIsValid)
+        {
+            <a href="@Url.Action("BuyWithTokens", new { Model.Subscription.SubscriptionId })" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { Model.Subscription.PriceTokens })</a>
+        }
 
-</p>
+    </p>
+}
