--- a/src/Mzayad.Web/Views/Subscriptions/BuyWithTokens.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/BuyWithTokens.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = StringFormatter.ObjectFormat(Global.BuySubscriptionWithName, Model);
 }
 
-<p>To purchase <strong>@Model.Subscription.Name</strong> with <strong>@StringFormatter.ObjectFormat(Global.SubscriptionPriceTokens, new { Model.Subscription.PriceTokens })</strong> please review your token balance below and click submit to continue.</p>
+<p>Purchasing the subscription <strong>@Model.Subscription.Name</strong> with <strong>@StringFormatter.ObjectFormat(Global.SubscriptionPriceTokens, new { Model.Subscription.PriceTokens })</strong> will update your account as follows:</p>
 
 <div class="row">
     <div class="@Html.Css().FormNarrow">
@@ -30,7 +30,7 @@
             </section>
 
             <section class="form-buttons">
-                <button type="submit" class="btn btn-default">@Global.Submit</button>
+                <button type="submit" class="btn btn-default">@StringFormatter.ObjectFormat(Global.BuyForPriceTokens, new { Model.Subscription.PriceTokens })</button>
 
             </section>
         }
