--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -1,6 +1,8 @@
-﻿@using Mzayad.Core.Formatting
+﻿@using Humanizer
+@using Mzayad.Core.Formatting
 @using Mzayad.Models.Enum
 @using OrangeJetpack.Base.Core.Formatting
+@using DateTimeFormatter = Mzayad.Core.Formatting.DateTimeFormatter
 @model Mzayad.Web.Models.User.DashboardViewModel
 @{
     ViewBag.Title = Global.Dashboard;
@@ -47,21 +49,24 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title" style="display: inline-block">Profile</h3>
-        <div class="pull-right"><a href="@Url.Action("EditProfile")"><small>@Global.EditProfile</small></a></div>
+        <div class="pull-right"><a href="@Url.Action("EditProfile")"><small>@Global.EditProfile</small></a>
+        </div>
     </div>
-    <div class="panel-body form-horizontal">     
+    <div class="panel-body form-horizontal">
         <div class="form-group">
             <div class="col-sm-2">
-                <img class="img-responsive" src="@Model.UserProfile.Avatar.Url" alt="responsive" />
+                <img class="img-responsive" src="@Model.UserProfile.Avatar.Url" alt="responsive"/>
             </div>
             <div class="col-sm-10">
                 @switch (Model.UserProfile.Status)
                 {
                     case UserProfileStatus.Private:
-                        <p class="form-control-static">Your profile is currently <strong class="text-no"><i class="fa fa-lock"></i> PRIVATE</strong> and hidden from other users.</p>
+                        <p class="form-control-static">Your profile is currently <strong class="text-no"><i class="fa fa-lock"></i> PRIVATE</strong> and hidden from other users.
+                        </p>
                         break;
                     case UserProfileStatus.Public:
-                        <p class="form-control-static">Your profile is currently <strong class="text-yes"><i class="fa fa-unlock"></i> PUBLIC</strong> and visible to other Mzayad users.</p>
+                        <p class="form-control-static">Your profile is currently <strong class="text-yes"><i class="fa fa-unlock"></i> PUBLIC</strong> and visible to other Mzayad users.
+                        </p>
                         break;
                 }
             </div>
@@ -69,12 +74,36 @@
     </div>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title" style="display: inline-block">Bid History</h3>
-    </div>
-    <div class="panel-body form-horizontal">
+@if (Model.BidHistory.Any())
+{
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title" style="display: inline-block">@Global.BidHistory</h3>
+        </div>
+        <div class="panel-body form-horizontal">
+            <table class="@Html.Css().GridTable">
+                <thead>
+                    <tr>
+                        <th>@Global.DateSlashTime</th>
+                        <th>@Global.Auction</th>
+                        <th>@Global.Amount</th>
+                        <th>@Global.TimeLeft</th>
+                    </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model.BidHistory)
+                {
+                    <tr>
+                        <td>@DateTimeFormatter.ToLocalTime(item.CreatedUtc, DateTimeFormatter.Format.Full)</td>
+                        <td>@item.Auction.Title</td>
+                        <td>@CurrencyFormatter.Format(item.Amount)</td>
+                        <td>@TimeSpan.FromSeconds(item.SecondsLeft).Humanize(4)</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
 
-
+        </div>
     </div>
-</div>
+}
+
