MZ-77 properly localized Subscription Index view

--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -139,6 +139,10 @@ p.form-control-static:after {
   background: #132e72;
   color: #ffffff;
 }
+.btn-default[disabled] {
+  background: #132e72;
+  opacity: 0.4;
+}
 .btn-sm,
 .btn-sm:hover,
 .btn-sm:focus {
