--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
     </li>
 </ul>
 
-<button id="clear-cache" type="button" class="btn btn-default btn-sm">Clear Cache</button>
+<button id="clear-cache" type="button" class="btn btn-default btn-sm hidden">Clear Cache</button>
 
 <script type="text/html" id="closed-template">
     <div class="auction-status status-closed">
