--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -149,6 +149,11 @@ p.form-control-static:after {
     color: @white;
 }
 
+.btn-default[disabled] {
+    background: @base;
+    opacity: 0.4;
+}
+
 .btn-sm, .btn-sm:hover, .btn-sm:focus {
     padding: 5px 10px;
     font-size: 1.4rem;
