MZ-77 removed unused references in test projects

--- a/src/Mzayad.Web/Views/Subscriptions/Index.cshtml
+++ b/src/Mzayad.Web/Views/Subscriptions/Index.cshtml
@@ -38,7 +38,7 @@
 
                     @if (item.IsSoldOut)
                     {
-                        <a class="btn btn-default btn-block" href="#" disabled>@Global.BuyNow</a>
+                        <a class="btn btn-default btn-block" disabled>@Global.BuyNow</a>
                     }
                     else
                     {
