MZ-86 Trophy controller and Views and trophies Map

--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Specifications")"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Sponsors")"><i class="fa fa-fw fa-pad-right fa-money"></i>Sponsors</a></li>
             <li><a disabled href="#"><i class="fa fa-fw fa-pad-right fa-gamepad"></i>Gamification</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Trophies")"><i class="fa fa-fw fa-pad-right fa-trophy"></i>Trophies</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Levels")"><i class="fa fa-fw fa-pad-right fa-line-chart"></i>Levels</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Avatars")"><i class="fa fa-fw fa-pad-right fa-rocket"></i>Avatars</a></li>
             <li><a href="@Url.Action("Index", "Subscriptions")"><i class="fa fa-fw fa-pad-right fa-gift"></i>Subscriptions</a></li> 
