MZ-88 Show user's trophies in dashboard

--- a/src/Mzayad.Web/Views/User/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/User/_Layout.cshtml
@@ -14,6 +14,7 @@
             <li><a href="@Url.Action("Index", "Subscriptions")"><i class="fa fa-fw fa-pad-right fa-gift"></i>@Global.BuySubscription</a></li>
             <li><a href="@Url.Action("ChangePassword", "User")"><i class="fa fa-fw fa-pad-right fa-lock"></i>@Global.ChangePassword</a></li>
             <li><a href="@Url.Action("Notifications", "User")"><i class="fa fa-fw fa-pad-right fa-bullhorn"></i>@Global.Notifications</a></li>
+            <li><a href="@Url.Action("Trophies", "User")"><i class="fa fa-fw fa-pad-right fa-trophy"></i>@Global.Trophies</a></li>
             <li><a href="@Url.Action("Index","WishList")"><i class="fa fa-fw fa-pad-right fa-star"></i>@Global.MyWishList</a></li>
         </ul>
     </div>
